# Atomic-SRE

./: .gitignore  .typos.toml  CONTRIBUTING.md  DEVELOPMENT.md  Dockerfile  LICENSE  README.md  docker-compose.yaml  install.sh  pyproject.toml  ruff.toml
src/agentic_sre/: __init__.py  run.py
src/agentic_sre/cli/: __init__.py  env.py  interactive_shell.py  main.py
src/agentic_sre/cli/configuration/: __init__.py  models.py  options.py  store.py  wizard.py
src/agentic_sre/cli/configuration/providers/: aws.py
src/agentic_sre/cli/mode/: local.py
src/agentic_sre/cli/mode/remote/: menu.py
src/agentic_sre/cli/presentation/: ascii_art.py  banner.py
src/agentic_sre/config/: paths.py
src/agentic_sre/core/: __init__.py  agent.py  interfaces.py  models.py  prompts.py  settings.py
src/agentic_sre/core/deployments/: __init__.py
src/agentic_sre/core/deployments/aws_ecs/: __init__.py  cleanup.py  ecs_tasks.py  images.py  models.py  network.py  security_groups.py  session.py  status.py
src/agentic_sre/core/tools/: __init__.py  cloudwatch.py  github.py  slack.py
src/agentic_sre/eval/: README.md
src/agentic_sre/eval/common/: __init__.py
src/agentic_sre/eval/diagnosis_quality/: README.md  config.py  experiment.py  github_toolset.py  prompts.py  run.py
src/agentic_sre/eval/diagnosis_quality/dataset/: create_and_populate.py
src/agentic_sre/eval/diagnosis_quality/metrics/: __init__.py
src/agentic_sre/eval/diagnosis_quality/mocks/: __init__.py  cloudwatch.py  runtime.py  toolset.py
src/agentic_sre/eval/tool_call/: README.md  config.py  experiment.py  github_toolset.py  prompts.py  run.py
src/agentic_sre/eval/tool_call/dataset/: __init__.py  create_and_populate.py
src/agentic_sre/eval/tool_call/metrics/: __init__.py  expected_tool_select_order.py  expected_tool_selection.py
src/agentic_sre/eval/tool_call/mocks/: __init__.py  cloudwatch.py  runtime.py  toolset.py
src/atomic_sre/: __init__.py  run.py
src/atomic_sre/cli/: __init__.py  env.py  interactive_shell.py  main.py
src/atomic_sre/cli/configuration/: __init__.py  models.py  store.py  wizard.py
src/atomic_sre/cli/configuration/providers/: aws.py
src/atomic_sre/cli/mode/: local.py
src/atomic_sre/cli/mode/remote/: menu.py
src/atomic_sre/cli/presentation/: ascii_art.py  banner.py
src/atomic_sre/config/: paths.py
src/atomic_sre/core/: __init__.py  agent.py  interfaces.py  models.py  prompts.py  settings.py
src/atomic_sre/core/deployments/: __init__.py
src/atomic_sre/core/deployments/aws_ecs/: __init__.py  cleanup.py  ecs_tasks.py  images.py  models.py  network.py  security_groups.py  session.py  status.py
src/atomic_sre/core/tools/: __init__.py  cloudwatch.py
src/atomic_sre/eval/: README.md
src/atomic_sre/eval/common/: __init__.py  github_toolset.py  mock_slack.py
src/atomic_sre/eval/diagnosis_quality/: README.md  config.py  experiment.py  github_toolset.py  prompts.py  run.py
src/atomic_sre/eval/diagnosis_quality/dataset/: create_and_populate.py
src/atomic_sre/eval/diagnosis_quality/metrics/: __init__.py  affected_services_match.py  root_cause_correctness.py  suggested_fixes_quality.py
src/atomic_sre/eval/diagnosis_quality/mocks/: __init__.py  cloudwatch.py  runtime.py  slack.py  toolset.py
src/atomic_sre/eval/tool_call/: README.md  config.py  experiment.py  github_toolset.py  prompts.py  run.py
src/atomic_sre/eval/tool_call/dataset/: __init__.py  create_and_populate.py
src/atomic_sre/eval/tool_call/metrics/: __init__.py  expected_tool_select_order.py  expected_tool_selection.py
tests/: __init__.py  test_cloudwatch_toolset.py  test_filter_mcp_tools.py  test_get_model.py  test_prompts.py
(+29 files in other folders)
