[project]
name = "agentic-sre"
version = "0.2.1"
description = "Flagship orchestration engine for the Autonomous Multi-Agent AI Organization, automating infrastructure monitoring, diagnosis, and self-healing."
authors = [{ name = "DIVYANSH RAWAT", email = "divyanshrawatofficial@gmail.com" }]
readme = "README.md"
requires-python = ">=3.13,<4.0"
license = { text = "MIT" }
dependencies = [
    "boto3>=1.42.39",
    "click>=8.3.1",
    "platformdirs>=4.5.1",
    "pydantic-ai>=1.51.0",
    "pydantic-settings>=2.12.0",
    "python-dotenv>=1.2.1",
    "questionary>=2.1.1",
    "rich>=14.3.2",
]

[project.scripts]
agentic-sre = "agentic_sre.cli.main:main"
agentic-sre-run-tool-call-eval = "agentic_sre.eval.tool_call.run:main"
agentic-sre-run-diagnosis-quality-eval = "agentic_sre.eval.diagnosis_quality.run:main"

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
]
eval = [
    "opik>=1.10.38",
]

[build-system]
requires = ["uv_build>=0.9.28,<0.11.0"]
build-backend = "uv_build"

[tool.hatch.build.targets.wheel]
packages = ["src/agentic_sre"]

[tool.pytest.ini_options]
testpaths = ["tests"]
