[project]
name = "agentic-sre"
version = "0.2.1"
description = "Flagship orchestration engine for the Autonomous Multi-Agent AI Organization, automating infrastructure monitoring, diagnosis, and self-healing."
authors = [{ name = "DIVYANSH RAWAT", email = "divyanshrawatofficial@gmail.com" }]
readme = "README.md"
requires-python = ">=3.13,<4.0"
license = { text = "MIT" }
dependencies = [
    "boto3>=1.42.39",
    "click>=8.1.8",
    "rich>=13.9.4",
    "pydantic>=2.10.6",
    "python-dotenv>=1.0.1",
    "openai>=1.61.1",
    "anthropic>=0.45.2",
    "langgraph>=0.2.70",
    "langchain-openai>=0.3.5",
    "langchain-anthropic>=0.3.6",
    "pydantic-ai>=0.0.14",
]

[project.scripts]
agentic-sre = "agentic_sre.run:main"
agentic-sre-run-tool-call-eval = "agentic_sre.eval.tool_call.run:main"
agentic-sre-run-diagnosis-quality-eval = "agentic_sre.eval.diagnosis_quality.run:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "mypy>=1.15.0",
    "ruff>=0.9.6",
]
